--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,25 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.hardware.sensor.proximity" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/bowl_food_solid_full"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/bowl_food_solid_full"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodyApp"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".Rotate"
+            android:name=".Recetas"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".Tabla_dinamica"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.FoodyApp.NoActionBar"/>
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".Favoritos"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".Rotate"
+            android:exported="false" />
+        <activity
+            android:name=".Sensor"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
         <activity
             android:name=".NuevaReceta"
             android:exported="false"
