--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.hardware.sensor.proximity" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +17,46 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodyApp"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ListaChatsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".CrearPublicacionActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".ChatActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".FeedAdapter"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".FeedActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".PerfilPublicoActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".RecuperarPasswordActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".PerfilActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".Registro"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
+        <activity
+            android:name=".CrudRecetas"
+            android:exported="false"
+            android:theme="@style/Theme.FoodyApp.NoActionBar" />
         <activity
             android:name=".Recetas"
             android:exported="false"
