Feat: Nuevas vistas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.hardware.sensor.proximity" />
@@ -16,7 +16,10 @@
         android:roundIcon="@drawable/bowl_food_solid_full"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodyApp"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".Login"
+            android:exported="false" />
         <activity
             android:name=".ListaChatsActivity"
             android:exported="false"
@@ -84,9 +87,9 @@
             android:exported="false"
             android:theme="@style/Theme.FoodyApp.NoActionBar" />
         <activity
-            android:name=".Login"
+            android:name=".MainActivity2a"
             android:exported="true"
-            android:theme="@style/Theme.FoodyApp.NoActionBar">
+            android:theme="@style/Theme.FoodyApp.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
